SERVER-60830 Added more predicates for $eq $lt $lte in internal unpack bucket

(cherry picked from commit 406e8f1bebdc7e506b1dfcf013c528de53807e78)